--- a/index.html
+++ b/index.html
@@ -1,146 +1,154 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-  <meta charset="utf-8">
-  <title>HTML Academy: Седона</title>
+    <meta charset="utf-8">
+    <title>HTML Academy: Седона</title>
 </head>
+
 <body>
 
-  <header class="page-header">
-    <img class="page-header-logo" alt="Логотип Седоны" src="#">
-    <nav class="navigation">
-      <ul class="navigation-list">
-        <li class="navigation-item">
-          <a class="navigation-link navigation-link-current">Главная</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="about-sedona.html">О Седоне</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="hotels.html">Гостиницы</a>
-        </li>
-      </ul>
-      <ul class="navigation-list navigation-search">
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">Поиск</span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#">
-            <span class="visually-hidden">Избранное</span>
-          </a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link" href="#hotel-search">Хочу сюда</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-  <main class="main-index">
-    <h1 class="visually-hidden">Седона</h1>
-    <section class="welcome">
-        <img class="welcome-image" src="#" alt="Добро пожаловать">
-        <img class="welcome-gorgeous" src="#" alt="в прекрасную Седону">
-        <img class="welcome-sedona" src="#" alt="Она лучше Гранд-Каньона">
-    </section>
-    <section class="description">
-        <h2 class="visually-hidden">Описание Седоны</h2>
-        <p class="description-town">Седона — небольшой городок в Аризоне,
-            <br>заслуживающий большего!
-        </p>
-        <p class="description-advantages">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
-    </section>
-    <section class="advantages">
-        <h2 class="visually-hidden">Преимущества</h2>
-        <ul class="advantages-list">
-            <li class="advantages-item">
-                <div class="advantages-darkblue">
-                    <h3 class="advantages-title">Настоящий<br>городок</h3>
-                    <p class="advantages-description">— №1 —</p>
-                    <p class="advantages-description">Седона — не аттракцион для <br>
-                        туристов, там течёт своя <br>
-                        жизнь</p>
-                </div>
-                <img class="advantages-image" src="#" alt="Город Седона">
-                <ul class="advantages-nested-list">
-                    <li class="avantages-item-nested">
-                        <div class="advantages-nested-lightblue">
-                            <h3 class="advantages-title-nested">Жильё</h3>
-                            <p class="advantages-description-nested">Рекомендуем пожить <br>
-                                в настоящем мотеле, <br>
-                                всё как в кино!</p>
-                        </div>
-                    </li>
-                    <li class="avantages-item-nested">
-                        <div class="advantages-nested-white">
-                            <h3 class="advantages-title-nested">Еда</h3>
-                            <p class="advantages-description-nested">Всегда заказывайте <br>
-                                топовый фирменный бургер, <br>
-                                вы не разочаруетесь!</p>
-                        </div>
-                    </li>
-                    <li class="avantages-item-nested">
-                        <div class="advantages-nested-lightblue">
-                            <h3 class="advantages-title-nested">Сувениры</h3>
-                            <p class="advantages-description-nested">Не только китайского, <br>
-                                но и настоящего местного
-                                <br>производства!
-                            </p>
-                        </div>
-                    </li>
-                </ul>
-            </li>
-            <li class="advantages-item">
-                <img class="advantages-image" src="#" alt="Мост дьявола">
-                <div class="advantages-darkblue">
-                    <h3 class="advantages-title">Там есть
-                        <br>мост дьявола
-                    </h3>
-                    <p class="advantages-description">— №2 —</p>
-                    <p class="advantages-description">Да, по нему можно пройти!
-                        <br>Если вы осмелитесь,
-                        <br>разумеется
-                    </p>
-                </div>
-            </li>
-            <li class="advantages-item">
-                <div class="advantages-lightblue">
-                    <h3 class="advantages-title">Небольшая
-                        <br>площадь
-                    </h3>
-                    <p class="advantages-description">— №3 —</p>
-                    <p class="advantages-description">Все достопримечательности
-                        <br>находятся очень близко
-                    </p>
-                </div>
-            </li>
-            <li class="advantages-item">
-                <div class="advantages-blue">
-                    <h3 class="advantages-title">Красивая
-                        <br>дорога
-                    </h3>
-                    <p class="advantages-description">— №4 —</p>
-                    <p class="advantages-description">Ехать в Седону из Лас-Вегаса
-                        <br>совсем не скучно!
-                    </p>
-                </div>
-            </li>
-            <li class="advantages-item">
-                <div class="advantages-lightblue">
-                    <h3 class="advantages-title">Мало
-                        <br>туристов
-                    </h3>
-                    <p class="advantages-description">— №5 —</p>
-                    <p class="advantages-description">Большинство едет в Гранд
-                        <br>Каньон и толпится там
-                    </p>
-                </div>
-            </li>
-        </ul>
+    <header class="page-header">
+        <img class="page-header-logo" alt="Логотип Седоны" src="#">
+        <nav class="navigation">
+            <ul class="navigation-list">
+                <li class="navigation-item">
+                    <a class="navigation-link navigation-link-current">Главная</a>
+                </li>
+                <li class="navigation-item">
+                    <a class="navigation-link" href="about-sedona.html">О Седоне</a>
+                </li>
+                <li class="navigation-item">
+                    <a class="navigation-link" href="hotels.html">Гостиницы</a>
+                </li>
+            </ul>
+            <ul class="navigation-list navigation-search">
+                <li class="navigation-item">
+                    <a class="navigation-link" href="#">
+                        <span class="visually-hidden">Поиск</span>
+                    </a>
+                </li>
+                <li class="navigation-item">
+                    <a class="navigation-link" href="#">
+                        <span class="visually-hidden">Избранное</span>
+                    </a>
+                </li>
+                <li class="navigation-item">
+                    <a class="navigation-link button" href="#hotel-search">Хочу сюда</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main-index">
+        <h1 class="visually-hidden">Седона</h1>
+        <section class="welcome">
+            <img class="welcome-image" src="#" alt="Добро пожаловать">
+            <img class="welcome-gorgeous" src="#" alt="в прекрасную Седону">
+            <img class="welcome-sedona" src="#" alt="Она лучше Гранд-Каньона">
+        </section>
+        <section class="description">
+            <h2 class="description-title">Седона — небольшой городок в Аризоне,
+                <br>заслуживающий большего!
+            </h2>
+            <p class="description-advantages">Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!</p>
+        </section>
+        <section class="advantages">
+            <h2 class="visually-hidden">Преимущества</h2>
+            <ul class="advantages-list">
+                <li class="advantages-item">
+                    <div class="advantages-darkblue">
+                        <h3 class="advantages-title">Настоящий<br>городок</h3>
+                        <p class="advantages-description">— №1 —</p>
+                        <p class="advantages-description">Седона — не аттракцион для <br>
+                            туристов, там течёт своя <br>
+                            жизнь</p>
+                    </div>
+                    <img class="advantages-image" src="#" alt="Город Седона">
+                    <ul class="advantages-nested-list">
+                        <li class="avantages-item-nested">
+                            <div class="advantages-nested-lightblue">
+                                <h3 class="advantages-title-nested">Жильё</h3>
+                                <p class="advantages-description-nested">Рекомендуем пожить <br>
+                                    в настоящем мотеле, <br>
+                                    всё как в кино!</p>
+                            </div>
+                        </li>
+                        <li class="avantages-item-nested">
+                            <div class="advantages-nested-white">
+                                <h3 class="advantages-title-nested">Еда</h3>
+                                <p class="advantages-description-nested">Всегда заказывайте <br>
+                                    топовый фирменный бургер, <br>
+                                    вы не разочаруетесь!</p>
+                            </div>
+                        </li>
+                        <li class="avantages-item-nested">
+                            <div class="advantages-nested-lightblue">
+                                <h3 class="advantages-title-nested">Сувениры</h3>
+                                <p class="advantages-description-nested">Не только китайского, <br>
+                                    но и настоящего местного
+                                    <br>производства!
+                                </p>
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+                <li class="advantages-item">
+                    <img class="advantages-image" src="#" alt="Мост дьявола">
+                    <div class="advantages-darkblue">
+                        <h3 class="advantages-title">Там есть
+                            <br>мост дьявола
+                        </h3>
+                        <p class="advantages-description">— №2 —</p>
+                        <p class="advantages-description">Да, по нему можно пройти!
+                            <br>Если вы осмелитесь,
+                            <br>разумеется
+                        </p>
+                    </div>
+                </li>
+                <li class="advantages-item">
+                    <div class="advantages-lightblue">
+                        <h3 class="advantages-title">Небольшая
+                            <br>площадь
+                        </h3>
+                        <p class="advantages-description">— №3 —</p>
+                        <p class="advantages-description">Все достопримечательности
+                            <br>находятся очень близко
+                        </p>
+                    </div>
+                </li>
+                <li class="advantages-item">
+                    <div class="advantages-blue">
+                        <h3 class="advantages-title">Красивая
+                            <br>дорога
+                        </h3>
+                        <p class="advantages-description">— №4 —</p>
+                        <p class="advantages-description">Ехать в Седону из Лас-Вегаса
+                            <br>совсем не скучно!
+                        </p>
+                    </div>
+                </li>
+                <li class="advantages-item">
+                    <div class="advantages-lightblue">
+                        <h3 class="advantages-title">Мало
+                            <br>туристов
+                        </h3>
+                        <p class="advantages-description">— №5 —</p>
+                        <p class="advantages-description">Большинство едет в Гранд
+                            <br>Каньон и толпится там
+                        </p>
+                    </div>
+                </li>
+            </ul>
 
-    </section>
-</main>
+        </section>
+        <section class="search">
+            <h2 class="search-title" id="hotel-search">Заинтересовались?</h2>
+            <p>Укажите предполагаемые даты поездки, <br>
+                и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+            <a class="button search-button" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
+        </section>
+    </main>
 
-  </body>
+</body>
+
 </html>
