--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
     <main class="main-index">
         <h1 class="visually-hidden">Седона</h1>
         <section class="welcome">
+            <h2 class="visually-hidden">Добро пожаловать</h2>
             <img class="welcome-image" src="#" alt="Добро пожаловать">
             <img class="welcome-gorgeous" src="#" alt="в прекрасную Седону">
             <img class="welcome-sedona" src="#" alt="Она лучше Гранд-Каньона">
@@ -148,6 +149,52 @@
             <a class="button search-button" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
         </section>
     </main>
+    <footer class="page-footer">
+        <section class="newsletter">
+          <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
+          <p>Только полезная информация и никакого спама, <br>
+            честное бойскаутское!</p>
+          <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label for="newsletter-email" class="visually-hidden">Email</label>
+            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
+              required>
+            <button class="button newsletter-button" type="submit">Подписаться</button>
+          </form>
+        </section>
+        <section class="footer-contacts">
+          <h2 class="visually-hidden">Контакты</h2>
+          <section class="footer-social">
+            <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
+            <ul class="footer-social-list">
+              <li class="footer-social-item">
+                <a class="button" href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">ВКонтакте</span>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="button" href="https://t.me/htmlacademy">
+                  <span class="visually-hidden">Телеграм</span>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">Youtube</span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer-phone">
+            <h3 class="visually-hidden">Телефон</h3>
+            <address class="footer-contacts-phone">
+              <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            </address>
+          </section>
+          <section class="htmlacademy-link">
+            <h3 class="visually-hidden">Логотип HTML Academy</h3>  
+            <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="#" alt="Логотип HTML Academy"></a>
+          </section>
+        </section>
+      </footer>
 
 </body>
 
