--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </a>
                 </li>
                 <li class="navigation-item">
-                    <a class="navigation-link button" href="#hotel-search">Хочу сюда</a>
+                    <a class="navigation-link button" href="#">Хочу сюда</a>
                 </li>
             </ul>
         </nav>
@@ -143,7 +143,7 @@
 
         </section>
         <section class="search">
-            <h2 class="search-title" id="hotel-search">Заинтересовались?</h2>
+            <h2 class="search-title">Заинтересовались?</h2>
             <p>Укажите предполагаемые даты поездки, <br>
                 и мы покажем вам лучшие предложения гостиниц в Седоне</p>
             <a class="button search-button" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
