--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,37 @@
 </head>
 
 <body>
-
+    <header class="page-header">
+        <img class="page-header-logo" alt="Логотип Седоны" src="#">
+        <nav class="navigation">
+            <ul class="navigation-list">
+                <li class="navigation-item">
+                    <a class="navigation-link" href="intex.html">Главная</a>
+                </li>
+                <li class="navigation-item">
+                    <a class="navigation-link" href="about-sedona.html">О Седоне</a>
+                </li>
+                <li class="navigation-item">
+                    <a class="navigation-link navigation-link-current">Гостиницы</a>
+                </li>
+            </ul>
+            <ul class="navigation-list navigation-search">
+                <li class="navigation-item">
+                    <a class="navigation-link" href="#">
+                        <span class="visually-hidden">Поиск</span>
+                    </a>
+                </li>
+                <li class="navigation-item">
+                    <a class="navigation-link" href="#">
+                        <span class="visually-hidden">Избранное</span>
+                    </a>
+                </li>
+                <li class="navigation-item">
+                    <a class="navigation-link button" href="#">Хочу сюда</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
     
 
 </body>
