Добавляет классы ссылкам и кнопкам

--- a/catalog.html
+++ b/catalog.html
@@ -118,6 +118,11 @@
                 <button class="button button-undo" type="submit">Сбросить</button>
             </form>
         </section>
+        <section class="catalog-results">
+            <h2 class="catalog-result-title">Найдено гостиниц: 38</h2>
+            
+
+        </section>
 
     </main>
     <footer class="page-footer page-footer-inner">
