--- a/catalog.html
+++ b/catalog.html
@@ -137,7 +137,7 @@
             <ul class="hotel-card">
                 <li class="product-card">
                     <a class="hotel-card-link" href="hotel.html">
-                        <img class="hotel-card-image" src="" alt="">
+                        <img class="hotel-card-image" src="#" alt="Amara Resort & Spa">
                         <h3 class="hotel-card-title">Amara Resort & Spa</h3>
                     </a>
                     <table class="hotel-card-price">
@@ -152,7 +152,7 @@
                 </li>
                 <li class="product-card">
                     <a class="hotel-card-link" href="hotel.html">
-                        <img class="hotel-card-image" src="" alt="">
+                        <img class="hotel-card-image" src="#" alt="Villas at Poco Diablo">
                         <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
                     </a>
                     <table class="hotel-card-price">
@@ -167,7 +167,7 @@
                 </li>
                 <li class="product-card">
                     <a class="hotel-card-link" href="hotel.html">
-                        <img class="hotel-card-image" src="" alt="">
+                        <img class="hotel-card-image" src="#" alt="Desert Quail Inn">
                         <h3 class="hotel-card-title">Desert Quail Inn</h3>
                     </a>
                     <table class="hotel-card-price">
@@ -182,7 +182,7 @@
                 </li>
                 <li class="product-card">
                     <a class="hotel-card-link" href="hotel.html">
-                        <img class="hotel-card-image" src="" alt="">
+                        <img class="hotel-card-image" src="#" alt="GreenTree Inn">
                         <h3 class="hotel-card-title">GreenTree Inn</h3>
                     </a>
                     <table class="hotel-card-price">
