--- a/catalog.html
+++ b/catalog.html
@@ -125,11 +125,11 @@
                 <option value="cheap">Сначала дешевые</option>
                 <option value="expensive">Сначала дорогие</option>
             </select>
-            <a href="#" class="button button-white">
+            <a href="#" class="button button-white button-active">
                 <span class="visually-hidden">Показать карточки</span>
             </a>
             <a href="#" class="button button-white">
-                <span class="visually-hidden">Показать карточку</span>
+                <span class="visually-hidden">Показать слайдшоу</span>
             </a>
             <a class="button" href="#">
                 <span class="visually-hidden">Показать список</span>
