--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
 
 <body>
     <header class="page-header">
-        <img class="page-header-logo" alt="Логотип Седоны" src="#">
+        <img class="page-header-logo" src="images/logo/logo.svg" width="138" height="70" alt="Логотип Седоны">
         <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-item">
@@ -137,7 +137,7 @@
             <ul class="hotel-card">
                 <li class="product-card">
                     <a class="hotel-card-link" href="hotel.html">
-                        <img class="hotel-card-image" src="#" alt="Amara Resort & Spa">
+                        <img class="hotel-card-image" src="images/hotels/amara_resort.jpg" width="300" height="211" alt="Amara Resort & Spa">
                         <h3 class="hotel-card-title">Amara Resort & Spa</h3>
                     </a>
                     <table class="hotel-card-price">
@@ -152,7 +152,7 @@
                 </li>
                 <li class="product-card">
                     <a class="hotel-card-link" href="hotel.html">
-                        <img class="hotel-card-image" src="#" alt="Villas at Poco Diablo">
+                        <img class="hotel-card-image" src="images/hotels/villas_at_poco_diablo.jpg" width="300" height="211" alt="Villas at Poco Diablo">
                         <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
                     </a>
                     <table class="hotel-card-price">
@@ -167,7 +167,7 @@
                 </li>
                 <li class="product-card">
                     <a class="hotel-card-link" href="hotel.html">
-                        <img class="hotel-card-image" src="#" alt="Desert Quail Inn">
+                        <img class="hotel-card-image" src="images/hotels/desert_quail_inn.jpg" width="300" height="211" alt="Desert Quail Inn">
                         <h3 class="hotel-card-title">Desert Quail Inn</h3>
                     </a>
                     <table class="hotel-card-price">
@@ -182,7 +182,7 @@
                 </li>
                 <li class="product-card">
                     <a class="hotel-card-link" href="hotel.html">
-                        <img class="hotel-card-image" src="#" alt="GreenTree Inn">
+                        <img class="hotel-card-image" src="images/hotels/greentree _inn.jpg" width="300" height="211" alt="GreenTree Inn">
                         <h3 class="hotel-card-title">GreenTree Inn</h3>
                     </a>
                     <table class="hotel-card-price">
@@ -276,7 +276,7 @@
             </section>
             <section class="htmlacademy-link">
                 <h3 class="visually-hidden">Логотип HTML Academy</h3>
-                <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="#" alt="Логотип HTML Academy"></a>
+                <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="images/logo/html_academy.svg" width="115" height="33" alt="Логотип HTML Academy"></a>
             </section>
         </section>
     </footer>
