--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="page-header">
-        <img class="page-header-logo" alt="Логотип Седоны" src="#">
+        <img class="page-header-logo" src="images/logo/logo.svg" width="138" height="70" alt="Логотип Седоны">
         <nav class="navigation">
             <ul class="navigation-list">
                 <li class="navigation-item">
@@ -43,9 +43,7 @@
         <h1 class="visually-hidden">Седона</h1>
         <section class="welcome">
             <h2 class="visually-hidden">Добро пожаловать</h2>
-            <img class="welcome-image" src="#" alt="Добро пожаловать">
-            <img class="welcome-gorgeous" src="#" alt="в прекрасную Седону">
-            <img class="welcome-sedona" src="#" alt="Она лучше Гранд-Каньона">
+            <img class="welcome-image" src="images/welcome/welcome.svg" width="458" height="352" alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks">
         </section>
         <section class="description">
             <h2 class="description-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
@@ -60,7 +58,7 @@
                         <p class="advantages-description">— №1 —</p>
                         <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
                     </div>
-                    <img class="advantages-image" src="#" alt="Город Седона">
+                    <img class="advantages-image" src="images/advantage/street.jpg" width="800" height="384" alt="Улицы Седоны">
                     <ul class="advantages-nested-list">
                         <li class="avantages-item-nested">
                             <div class="advantages-nested-lightblue">
@@ -83,7 +81,7 @@
                     </ul>
                 </li>
                 <li class="advantages-item">
-                    <img class="advantages-image" src="#" alt="Мост дьявола">
+                    <img class="advantages-image" src="images/advantage/bridge.jpg" width="800" height="384" alt="Мост дьявола">
                     <div class="advantages-darkblue">
                         <h3 class="advantages-title">Там есть мост дьявола</h3>
                         <p class="advantages-description">— №2 —</p>
@@ -163,7 +161,7 @@
           </section>
           <section class="htmlacademy-link">
             <h3 class="visually-hidden">Логотип HTML Academy</h3>  
-            <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="#" alt="Логотип HTML Academy"></a>
+            <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="images/logo/html_academy.svg" width="115" height="33" alt="Логотип HTML Academy"></a>
           </section>
         </section>
       </footer>
