--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -34,7 +35,7 @@
                     </a>
                 </li>
                 <li class="navigation-item">
-                    <a class="navigation-link button button-brown" href="#">Хочу сюда</a>
+                    <a class="navigation-link button button-basic" href="#">Хочу сюда</a>
                 </li>
             </ul>
         </nav>
@@ -115,7 +116,7 @@
             <h2 class="search-title">Заинтересовались?</h2>
             <p>Укажите предполагаемые даты поездки, <br>
                 и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a class="button button-brown search-button" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
+            <a class="button button-basic search-button" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
         </section>
     </main>
     <footer class="page-footer">
@@ -127,7 +128,7 @@
             <label for="newsletter-email" class="visually-hidden">Email</label>
             <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
               required>
-            <button class="button button-blue newsletter-button" type="submit">Подписаться</button>
+            <button class="button button-additional newsletter-button" type="submit">Подписаться</button>
           </form>
         </section>
         <section class="footer-contacts">
