--- a/catalog.html
+++ b/catalog.html
@@ -115,7 +115,7 @@
                         </div>
                       </div>
                 </fieldset>
-                <button class="button button-additional" type="submit">Применить</button>
+                <button class="button button-additional button-apply" type="submit">Применить</button>
                 <button class="button button-reset" type="submit">Сбросить</button>
             </form>
         </section>
