--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </ul>
       </nav>
     </header>
-    <main class="main-index">
+    <main class="main-index main-container">
       <h1 class="visually-hidden">Седона</h1>
       <section class="welcome">
         <h2 class="visually-hidden">Добро пожаловать</h2>
