Добавляет сетку главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -10,8 +10,8 @@
 <body>
   <div class="container">
     <header class="page-header">
-        <img class="page-header-logo" src="images/logo/logo.svg" width="138" height="70" alt="Логотип Седоны">
         <nav class="navigation">
+          <img class="page-header-logo" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны">
             <ul class="navigation-list">
                 <li class="navigation-item">
                     <a class="navigation-link" href="intex.html">Главная</a>
@@ -249,7 +249,7 @@
                 <label for="newsletter-email" class="visually-hidden">Email</label>
                 <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
                     required>
-                <button class="button button-additional newsletter-button" type="submit">Подписаться</button>
+                <button class="button button-additional button-newsletter" type="submit">Подписаться</button>
             </form>
         </section>
         <section class="footer-contacts">
