--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="container">
     <header class="page-header">
-      <img class="page-header-logo" src="images/logo/logo.svg" width="138" height="70" alt="Логотип Седоны">
       <nav class="navigation">
+        <img class="page-header-logo" src="images/logo/logo.svg" width="139" height="70" alt="Логотип Седоны">
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current">Главная</a>
@@ -54,7 +54,7 @@
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
-          <li class="advantages-item">
+          <li class="advantages-item advantages-container">
             <div class="advantages-items advantages-town">
               <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-description-number">— №1 —</p>
@@ -63,28 +63,28 @@
             <img class="advantages-image" src="images/advantage/street.jpg" width="800" height="384" alt="Улицы Седоны">
             <ul class="advantages-nested-list">
               <li class="avantages-item-nested">
-                <div class="advantages-items advantages-nested-housing">
+                <div class="advantages-items advantages-nested advantages-nested-housing">
                   <h3 class="advantages-title">Жильё</h3>
-                  <p class="advantages-description-nested">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                  <p class="advantages-description advantages-description-nested">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
                 </div>
               </li>
               <li class="avantages-item-nested">
-                <div class="advantages-items advantages-nested-eating">
+                <div class="advantages-items advantages-nested advantages-nested-eating">
                   <h3 class="advantages-title">Еда</h3>
-                  <p class="advantages-description-nested">Всегда заказывайте топовый фирменный бургер, вы не
+                  <p class="advantages-description advantages-description-nested">Всегда заказывайте топовый фирменный бургер, вы не
                     разочаруетесь!</p>
                 </div>
               </li>
               <li class="avantages-item-nested">
-                <div class="advantages-items advantages-nested-souvenir">
+                <div class="advantages-items advantages-nested advantages-nested-souvenir">
                   <h3 class="advantages-title">Сувениры</h3>
-                  <p class="advantages-description-nested">Не только китайского, но и настоящего местного производства!
+                  <p class="advantages-description advantages-description-nested">Не только китайского, но и настоящего местного производства!
                   </p>
                 </div>
               </li>
             </ul>
           </li>
-          <li class="advantages-item">
+          <li class="advantages-item advantages-container">
             <img class="advantages-image" src="images/advantage/bridge.jpg" width="800" height="384" alt="Мост дьявола">
             <div class="advantages-items advantages-bridge">
               <h3 class="advantages-title">Там есть мост дьявола</h3>
@@ -119,7 +119,7 @@
         <h2 class="search-title">Заинтересовались?</h2>
         <p class="search-basic">Укажите предполагаемые даты поездки, <br>
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button button-basic search-button" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
+        <a class="button button-basic button-search" href="#">ПОИСК ГОСТИНИЦЫ В седоне</a>
       </section>
     </main>
     <footer class="page-footer">
@@ -131,42 +131,44 @@
           <label for="newsletter-email" class="visually-hidden">Email</label>
           <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
             required>
-          <button class="button button-additional newsletter-button" type="submit">Подписаться</button>
+          <button class="button button-additional button-newsletter" type="submit">Подписаться</button>
         </form>
       </section>
       <section class="footer-contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <section class="footer-social">
-          <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
-          <ul class="footer-social-list">
-            <li class="footer-social-item">
-              <a class="button footer-social-link" href="https://vk.com/htmlacademy">
-                <span class="visually-hidden">ВКонтакте</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="button footer-social-link" href="https://t.me/htmlacademy">
-                <span class="visually-hidden">Телеграм</span>
-              </a>
-            </li>
-            <li class="footer-social-item">
-              <a class="button footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
-                <span class="visually-hidden">Youtube</span>
-              </a>
-            </li>
-          </ul>
-        </section>
-        <section class="footer-phone">
-          <h3 class="visually-hidden">Телефон</h3>
-          <address class="footer-contacts-phone">
-            <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
-          </address>
-        </section>
-        <section class="htmlacademy-link">
-          <h3 class="visually-hidden">Логотип HTML Academy</h3>
-          <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="images/logo/html_academy.svg" width="115"
-              height="33" alt="Логотип HTML Academy"></a>
-        </section>
+        <div class="footer-container">
+          <section class="footer-social">
+            <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
+            <ul class="footer-social-list">
+              <li class="footer-social-item">
+                <a class="button footer-social-link" href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">ВКонтакте</span>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="button footer-social-link" href="https://t.me/htmlacademy">
+                  <span class="visually-hidden">Телеграм</span>
+                </a>
+              </li>
+              <li class="footer-social-item">
+                <a class="button footer-social-link" href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">Youtube</span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="footer-phone">
+            <h3 class="visually-hidden">Телефон</h3>
+            <address class="footer-contacts-phone">
+              <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+            </address>
+          </section>
+          <section class="htmlacademy-link">
+            <h3 class="visually-hidden">Логотип HTML Academy</h3>
+            <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="images/logo/html_academy.svg"
+                width="115" height="33" alt="Логотип HTML Academy"></a>
+          </section>
+        </div>
       </section>
     </footer>
   </div>
