Убирает height в разделах welcome и "Преимущества"

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main class="main-index main-container">
       <h1 class="visually-hidden">Седона</h1>
       <section class="welcome">
-        <h2 class="visually-hidden">Добро пожаловать</h2>
+        <h2 class="visually-hidden" hidden>Добро пожаловать</h2>
         <img class="welcome-image" src="images/welcome/welcome.svg" width="458" height="352"
           alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks">
       </section>
@@ -54,31 +54,37 @@
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
-          <li class="advantages-item advantages-container">
-            <div class="advantages-items advantages-town">
-              <h3 class="advantages-title">Настоящий городок</h3>
-              <p class="advantages-description-number">— №1 —</p>
-              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+          <li class="advantages-item">
+            <div class="advantages-container">
+              <div class="advantages-items advantages-town">
+                <h3 class="advantages-title">Настоящий городок</h3>
+                <p class="advantages-description-number">— №1 —</p>
+                <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
+              <img class="advantages-image" src="images/advantage/street.jpg" width="800" height="384"
+                alt="Улицы Седоны">
             </div>
-            <img class="advantages-image" src="images/advantage/street.jpg" width="800" height="384" alt="Улицы Седоны">
             <ul class="advantages-nested-list">
               <li class="avantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-housing">
                   <h3 class="advantages-title">Жильё</h3>
-                  <p class="advantages-description advantages-description-nested">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+                  <p class="advantages-description advantages-description-nested">Рекомендуем пожить в настоящем мотеле,
+                    всё как в кино!</p>
                 </div>
               </li>
               <li class="avantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-eating">
                   <h3 class="advantages-title">Еда</h3>
-                  <p class="advantages-description advantages-description-nested">Всегда заказывайте топовый фирменный бургер, вы не
+                  <p class="advantages-description advantages-description-nested">Всегда заказывайте топовый фирменный
+                    бургер, вы не
                     разочаруетесь!</p>
                 </div>
               </li>
               <li class="avantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-souvenir">
                   <h3 class="advantages-title">Сувениры</h3>
-                  <p class="advantages-description advantages-description-nested">Не только китайского, но и настоящего местного производства!
+                  <p class="advantages-description advantages-description-nested">Не только китайского, но и настоящего
+                    местного производства!
                   </p>
                 </div>
               </li>
