Добавляет микросетку для главной

--- a/catalog.html
+++ b/catalog.html
@@ -256,6 +256,7 @@
 
     </main>
     <footer class="page-footer page-footer-inner">
+      <div class="footer-container">
       <section class="newsletter newsletter-inner">
         <h2 class="page-footer-title footer-title-inner">Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, <br>
@@ -269,9 +270,9 @@
       </section>
       <section class="footer-contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <div class="footer-container">
+        <div class="footer-contacts-container">
           <section class="footer-social">
-            <h3 class="page-footer-title visually-hidden" hidden>Социальные сети</h3>
+            <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a class="button footer-social-link" href="https://vk.com/htmlacademy">
@@ -291,18 +292,19 @@
             </ul>
           </section>
           <section class="footer-phone">
-            <h3 class="visually-hidden" hidden>Телефон</h3>
+            <h3 class="visually-hidden">Телефон</h3>
             <address class="footer-contacts-phone">
               <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
             </address>
           </section>
           <section class="htmlacademy-link">
-            <h3 class="visually-hidden" hidden>Логотип HTML Academy</h3>
+            <h3 class="visually-hidden">Логотип HTML Academy</h3>
             <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="images/logo/html_academy.svg"
                 width="115" height="33" alt="Логотип HTML Academy"></a>
           </section>
         </div>
       </section>
+    </div>
     </footer>
   </div>
 </body>
