--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <main class="main-index main-container">
       <h1 class="visually-hidden">Седона</h1>
       <section class="welcome">
-        <h2 class="visually-hidden" hidden>Добро пожаловать</h2>
+        <h2 class="visually-hidden">Добро пожаловать</h2>
         <img class="welcome-image" src="images/welcome/welcome.svg" width="458" height="352"
           alt="Welcome to the gorgeous Sedona because the Grand Canyon sucks">
       </section>
@@ -68,14 +68,14 @@
               <li class="avantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-housing">
                   <h3 class="advantages-title">Жильё</h3>
-                  <p class="advantages-description advantages-description-nested">Рекомендуем пожить в настоящем мотеле,
+                  <p class="advantages-description">Рекомендуем пожить в настоящем мотеле,
                     всё как в кино!</p>
                 </div>
               </li>
               <li class="avantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-eating">
                   <h3 class="advantages-title">Еда</h3>
-                  <p class="advantages-description advantages-description-nested">Всегда заказывайте топовый фирменный
+                  <p class="advantages-description">Всегда заказывайте топовый фирменный
                     бургер, вы не
                     разочаруетесь!</p>
                 </div>
@@ -83,7 +83,7 @@
               <li class="avantages-item-nested">
                 <div class="advantages-items advantages-nested advantages-nested-souvenir">
                   <h3 class="advantages-title">Сувениры</h3>
-                  <p class="advantages-description advantages-description-nested">Не только китайского, но и настоящего
+                  <p class="advantages-description">Не только китайского, но и настоящего
                     местного производства!
                   </p>
                 </div>
@@ -129,6 +129,7 @@
       </section>
     </main>
     <footer class="page-footer">
+      <div class="footer-container">
       <section class="newsletter newsletter-index">
           <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
           <p class="newsletter-description">Только полезная информация и никакого спама, <br>
@@ -142,9 +143,9 @@
       </section>
       <section class="footer-contacts">
         <h2 class="visually-hidden">Контакты</h2>
-        <div class="footer-container">
+        <div class="footer-contacts-container">
           <section class="footer-social">
-            <h3 class="page-footer-title visually-hidden" hidden>Социальные сети</h3>
+            <h3 class="page-footer-title visually-hidden">Социальные сети</h3>
             <ul class="footer-social-list">
               <li class="footer-social-item">
                 <a class="button footer-social-link" href="https://vk.com/htmlacademy">
@@ -164,18 +165,19 @@
             </ul>
           </section>
           <section class="footer-phone">
-            <h3 class="visually-hidden" hidden>Телефон</h3>
+            <h3 class="visually-hidden">Телефон</h3>
             <address class="footer-contacts-phone">
               <a class="footer-contacts-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
             </address>
           </section>
           <section class="htmlacademy-link">
-            <h3 class="visually-hidden" hidden>Логотип HTML Academy</h3>
+            <h3 class="visually-hidden">Логотип HTML Academy</h3>
             <a href="https://htmlacademy.ru/"><img class="page-footer-logo" src="images/logo/html_academy.svg"
                 width="115" height="33" alt="Логотип HTML Academy"></a>
           </section>
         </div>
       </section>
+    </div>
     </footer>
   </div>
 </body>
